fix(Card): thumbnail overflow (#911)
* add overflow hidden

* add changeset

--- a/packages/card/style.module.css
+++ b/packages/card/style.module.css
@@ -81,6 +81,7 @@
     position: relative;
     display: grid;
     aspect-ratio: 16 / 9;
+    overflow: hidden;
 
     & img {
       object-fit: cover;
